# gridify

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.docker/: db-docker-compose.yml
.github/workflows/: backend-code-quality.yml  frontend-code-quality.yml
backend/: .pre-commit-config.yaml  Makefile  alembic.ini  main.py  pyproject.toml
backend/.docker/: test-db-docker-compose.yml
backend/gridify/: loggings.py  settings.py  typings.py  utils.py
backend/gridify/app/: __init__.py  db.py
backend/gridify/app/alembic/: env.py
backend/gridify/app/crud/: __init__.py  user.py
backend/gridify/app/crud/music/: __init__.py  album.py  artist.py  song.py
backend/gridify/app/routes/: auth.py
backend/gridify/models/: __init__.py  rating.py  user.py
backend/gridify/models/music/: __init__.py  album.py  artist.py  song.py
backend/tests/: conftest.py  strategies.py
backend/tests/app/crud/: test_user.py
backend/tests/app/crud/music/: test_album.py  test_artist.py  test_song.py
frontend/: .eslintrc.json  components.json  eslint.config.mjs  jest.config.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/.husky/: pre-push
frontend/src/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
frontend/src/components/common/SearchBar/: SearchBar.tsx
frontend/src/components/common/ThemeToggle/: ThemeToggle.tsx
frontend/src/components/layouts/ErrorOccurredPage/: ErrorOccurredPage.tsx  index.ts
frontend/src/components/layouts/LoadingPage/: LoadingPage.tsx
frontend/src/components/layouts/PrimaryLayout/: PrimaryLayout.tsx
frontend/src/components/navigation/Footer/: Footer.tsx
frontend/src/components/navigation/Header/: Header.tsx
frontend/src/context/: ThemeContext.ts
frontend/src/pages/: 404.tsx  _app.tsx  _document.tsx  globals.css  index.test.tsx  index.tsx  page.d.ts
frontend/src/providers/: ThemeProvider.tsx
frontend/src/schemas/: artist.ts
frontend/src/services/: baseService.ts  utils.ts
frontend/src/services/backend/: service.ts
frontend/src/services/lastFM/: service.ts
frontend/src/services/music/: service.ts  serviceInterfaces.ts
frontend/src/tests/: index.test.tsx
