[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "fastapi>=0.115.6",
    "hypothesis>=6.123.17",
    "psycopg>=3.2.4",
    "pydantic-settings>=2.7.1",
    "pytest-randomly>=3.16.0",
    "pytest-xdist>=3.6.1",
    "requests>=2.32.3",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "ruff>=0.9.1",
    "isort>=5.13.2",
]
test = [
    "pytest>=8.3.4",
]

[tool.setuptools.packages]
find = {include = ["gridify", "tests"]}

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "UP", "RUF", "PERF", "ERA", "PTH", "ANN", "ASYNC"]
ignore = ["UP040", "F403", "F405", "ANN401"]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["call-arg", "no-untyped-def", "unused-ignore"]
disallow_untyped_defs = false
disallow_untyped_decorators = false
